<resources>
    <string name="app_name">MapPicker</string>
    <string name="SearchHint">Type ID here</string>
    <string name="BtnSearchText">Search</string>
    <string name="BtnNewTournamentText">New tournament</string>
    <string name="BtnCheckTournamentText">Select</string>
    <string name="ListviewLabelText">Choose a tournament below:</string>
    <string name="IDText">ID: %1$s</string>
    <string name="NewMatchText">New match</string>
    <string name="TournamentViewLabelText">Match details:</string>
    <string name="MapPickBanLabel">Map Pick/Ban</string>
    <string name="AddMatchBtnText">Add Match</string>

    <!-- luo_uusi_turnaus.xml strings: -->
    <string name="luo_GameNameText">Choose a game:</string>
    <string name="luo_matchFormatText">Choose a format(best of x):</string>
    <string name="luo_SelectTeamsText">Select teams</string>
    <string name="luo_TournamentNameText">Tournament name:</string>
    <string name="luo_generateID">Generate ID</string>
    <string name="luo_Cancel">Cancel</string>
    <string name="luo_btnAdd">Add</string>
    <string-array name="spinnerGameItems">
        <item>Counter-Strike: Global Offensive</item>
    </string-array>
    <string-array name="spinnerFormatItems">
        <item>1</item>
        <item>3</item>
        <item>5</item>
    </string-array>

    <string name="line"> - </string>



    <!-- lisaa_ottelu.xml strings: -->
    <string name="TeamA">Team A</string>
    <string name="TeamB">Team B</string>
    <string name="BestOf">Best of:</string>
    <string name="SwapTeams">SWAP</string>
    <string name="CTButton">CT</string>
    <string name="TerroristButton">Terrorist</string>
    <string name="ReadyButton">Ready</string>
    <string name="BackButton">Back</string>
    <string name="Allreadybtn">Save</string>
    <string name="FormatBestOf3">Best of 3</string>
    <string name="FormatBestOf1">Best of 1</string>

    <string name="FinalPick">Final Pick</string>
    <string name="Knife">Starting side decided with knife round</string>
    <string name="PicksDone">Picks done</string>

    <string name="TeamAandTeamName">Team A = %1$s</string>
    <string name="TeamBandTeamName">Team B = %1$s</string>
    <string name="Savescores">Save scores</string>

    <string-array name="BanActions">
        <item>Empty</item>
        <item>Ban 1</item>
        <item>Ban 2</item>
        <item>Ban 3</item>
        <item>Ban 4</item>
        <item>Ban 5</item>
        <item>Ban 6</item>
    </string-array>

    <string-array name="PickActions">
        <item>Empty</item>
        <item>Pick 1</item>
        <item>Pick 2</item>
        <item>Pick 3</item>
        <item>Pick 4</item>
        <item>Pick 5</item>
        <item>Pick 6</item>
    </string-array>

    <!-- Map names -->
    <string-array name="mapNames">
        <item>Dust II</item>
        <item>Inferno</item>
        <item>Mirage</item>
        <item>Nuke</item>
        <item>Overpass</item>
        <item>Train</item>
        <item>Vertigo</item>
    </string-array>

    <!-- Image file names -->
    <string-array name="mapImages">
        <item>csgo_map_dust</item>
        <item>csgo_map_inferno</item>
        <item>csgo_map_mirage</item>
        <item>csgo_map_nuke</item>
        <item>csgo_map_overpass</item>
        <item>csgo_map_train</item>
        <item>csgo_map_vertigo</item>
    </string-array>


    <!-- best of types -->
    <string-array name="bestOf">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
    </string-array>

    <string-array name="TestTeams">
        <item>Tosi kovat äijät</item>
        <item>Ranuan kynäriseura</item>
        <item>Linnanmaa longshots</item>
        <item>OAMK ownaajat</item>
        <item>Tuusula titaanit</item>
    </string-array>


    //api urls
    <string name="addMatchAPI">https://iqkoa7ylxc.execute-api.eu-north-1.amazonaws.com/mapPicker/addmatch?IDtournament=%1$s&amp;TeamAname=%2$s&amp;TeamBname=%3$s&amp;Format=%4$d&amp;MatchInfo=%5$s</string>
    <string name="addTournamentAPI">https://iqkoa7ylxc.execute-api.eu-north-1.amazonaws.com/mapPicker/addnewtournament?TournamentName=%1$s&amp;TournamentDefaultFormat=%2$s&amp;Teams=%3$s&amp;GameName=%4$s</string>
    <string name="insertPickXScores">https://iqkoa7ylxc.execute-api.eu-north-1.amazonaws.com/mapPicker/savescores/insertpick%1$dscores?IDmatch=%2$d&amp;IDtournament=%3$s&amp;teamApick%4$dScore=%5$s&amp;teamBpick%6$dScore=%7$s</string>
    <string name="insertMapScores">https://iqkoa7ylxc.execute-api.eu-north-1.amazonaws.com/mapPicker/savescores/insertmapscores?IDmatch=%1$d&amp;IDtournament=%2$s&amp;teamAMapScore=%3$s&amp;teamBMapScore=%4$s</string>
    <string name="getMatchesAPI">https://iqkoa7ylxc.execute-api.eu-north-1.amazonaws.com/mapPicker/getmatchesbytournamentid?IDtournament=%1$s</string>
</resources>
