<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/teamA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TeamA"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/teamB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TeamB"
            android:textAlignment="center" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <LinearLayout
        android:id="@+id/addMatch_teams_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/teamADropdown"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:entries="@array/TestTeams" />

        <Button
            android:id="@+id/swap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:onClick="swapButton"
            android:text="@string/SwapTeams"
            tools:text="SWAP" />

        <Spinner
            android:id="@+id/teamBDropdown"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:entries="@array/TestTeams" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addMatch_bestOf_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/BestOf"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="0.5"
            android:text="@string/BestOf"
            android:textAlignment="viewEnd" />

        <Spinner
            android:id="@+id/bestOfDropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:entries="@array/bestOf" />
    </LinearLayout>

    <Button
        android:id="@+id/readyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="readyButton"
        android:text="@string/ReadyButton" />

    <TextView
        android:id="@+id/CurrentTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/Action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="backButton"
            android:text="@string/BackButton"
            android:visibility="gone" />

        <Button
            android:id="@+id/allReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="allReadyButton"
            android:text="@string/Allreadybtn"
            android:visibility="gone" />

    </LinearLayout>

    <ListView
        android:id="@+id/maps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

    </ListView>

</LinearLayout>