<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".LuoUusiTurnaus">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/luo_tvGame"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/luo_GameNameText"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerGame"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.5"
            android:entries="@array/Games" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/luo_tvFormat"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            android:text="@string/luo_matchFormatText"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerFormat"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.4"
            android:entries="@array/bestOf" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/luo_tvTournamentName"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/luo_TournamentNameText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTournamentName"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.5" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/luo_tvTeams"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:text="@string/luo_SelectTeamsText"
            android:textSize="18sp"
            tools:layout_weight="0.3" />

        <EditText
            android:id="@+id/editTextTeams"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="0.5"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAddTeam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/luo_btnAdd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lvTeams"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"


            android:choiceMode="multipleChoice" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnDeleteTeam"
            android:text="Remove selected team"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/luo_Cancel"
            tools:layout_weight="0.5" />

        <Button
            android:id="@+id/btnGenerate"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/luo_generateID"
            tools:layout_weight="0.5" />
    </LinearLayout>

</LinearLayout>