<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context=".MainActivity"
    >

    <EditText
        android:inputType="textCapCharacters"
        android:id="@+id/EditTextSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Write tournament ID here."
        android:hint="@string/SearchHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/searchBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnSearchText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/EditTextSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/updatebutton"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/TournamentsList"
        app:layout_constraintLeft_toRightOf="@id/TvListViewLabel"
         />

    <TextView
        android:id="@+id/TvListViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/EditTextSearch"
        app:layout_constraintBottom_toTopOf="@id/TournamentsList"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="10dp"
        android:text="@string/ListviewLabelText"/>

    <ListView
        android:id="@+id/TournamentsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TvListViewLabel" />
    <Button
        android:id="@+id/newTournamentBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/BtnNewTournamentText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
